# build-log-analyzer

./: README.md  build-log-analyzer.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: build-log-analyzer.install  changelog  control  copyright  files  watch
debian/upstream/: metadata
po/: build-log-analyzer.pot  sv.mo  sv.po
src/build_log_analyzer/: main.py
