[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-log-analyzer"
version = "0.1.2"
description = "GTK4 sbuild and pbuilder log analyzer with error highlighting"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
build-log-analyzer = "build_log_analyzer.main:main"

[tool.setuptools.packages.find]
where = ["src"]
